--- a/wiki/Plugins.wiki
+++ b/wiki/Plugins.wiki
@@ -43,7 +43,7 @@ static void InitPlugin() {
 static bool dll_initializer = (InitPlugin(),true);
 }}}
 
-Now, whenever loadPlugin("MyPlugin") opens the DLL, the initialization code will be run automatically and it can set up its JS state.
+Now, whenever loadPlugin("!MyPlugin") opens the DLL, the initialization code will be run automatically and it can set up its JS state.
 
 ==JS-side==
 
