Edited wiki page through web user interface.

--- a/wiki/PluginWhio.wiki
+++ b/wiki/PluginWhio.wiki
@@ -10,6 +10,10 @@ This plugins provides:
 
 ==C++ usage==
 
+When using the plugins API, you don't need to do anything C++-side to use this addon - simply load it described [Plugins on the plugins wiki page].
+
+If you're not using the plugins API, then...
+
 TODO
 
 ==JS usage==
