--- a/wiki/SourceTreeOverview.wiki
+++ b/wiki/SourceTreeOverview.wiki
@@ -1,4 +1,4 @@
-#summary Overview of the source tree
+#summary Overview of the source tree structure and conventions
 #labels Phase-Implementation
 
 The source tree has a relatively elaborate setup, with ease-of-expansion being a primary goal. It's based primarily off of the tree used in the libs11n project, and this structure has proven to be very flexible over the years.
