--- a/wiki/BuildingTheCode.wiki
+++ b/wiki/BuildingTheCode.wiki
@@ -1,4 +1,5 @@
 #summary Configuring and building the source tree
+#labels Phase-UserDocs,Phase-Implementation
 
 Caveat #1: the current build tree will ONLY work on GNU platforms, or Unix-like platforms which host GNU toolsets (including GNU-compatible versions of the basic system tools, gcc, and GNU Make 3.81). It won't compile as-is (or will compile but not link) on Cygwin or Mac platforms (i only have Linux boxes, so that's what my build tools target). i would really like to port (or get someone else to port) the tree to scons at some point (for platform compatibility), but i have no experience with scons. Once the tree is restructured how i want it, i'll revisit scons (which can live in parallel with my own personal favourite, Make).
 
@@ -11,6 +12,8 @@ The build is fairly conventional:
 make
 make install # doesn't yet work
 }}}
+
+My default build options is `make -j2` for parallel building, so the tree is believed to build okay with parallel builds (if it doesn't, please file a bug report). That said, certain parts of the tree enforce that certain directory branches are built before others, so certain branches may not allow parallelization.
 
 The following configuration options are often helpful or necessary:
 
