--- a/wiki/Plugins.wiki
+++ b/wiki/Plugins.wiki
@@ -60,8 +60,8 @@ From native code, you can use the PluginsPath() function to get access to a Path
 For example:
 
 {{{
-print(PathFinder.shared.plugins.path_string);
-print(PathFinder.shared.plugins.path_array);
+print(PathFinder.shared.plugins.pathString);
+print(PathFinder.shared.plugins.pathArray);
 print(PathFinder.shared.plugins.find("MyPlugin"));
   // ^^^ searches for MyPlugin.(dll|so) but does not open it
 }}}
