Edited wiki page through web user interface.

--- a/wiki/PluginStringFuncs.wiki
+++ b/wiki/PluginStringFuncs.wiki
@@ -4,4 +4,4 @@ This plugin provides the following JS-side functions:
 
   * `escape_js_string()` escapes a JS string.
   * `quote_js_string()` works like `escape_js_string()` but also adds quotes surrounding the string.
-  * <tt>[PluginSnprintf snprintf()]</tt>, for formatted output in classical `printf()` style.
+  * <tt>[PluginSprintf snprintf()]</tt>, for formatted output in classical `printf()` style.
