--- a/wiki/PluginSprintf.wiki
+++ b/wiki/PluginSprintf.wiki
@@ -4,7 +4,7 @@
 
 =sprintf() for JavaScript=
 
-The files `v8-sprintf.{h,cc}` contain an implementation of sprintf() for JS. It is in the v8::convert namespace, but is independent of that code - those two files can be plugged in to arbitrary v8-based source trees.
+The files `v8-sprintf.{h,cc}` contain an implementation of sprintf() for JS. It is independent of the rest of the library - those two files can be plugged in to arbitrary v8-based source trees.
 
 To include it in your C++ application, see the instructions in the header file. From JS, it is used just like printf(), but instead of printing the result somewhere it returns the result as a string. For example:
 
