--- a/wiki/PluginStringFuncs.wiki
+++ b/wiki/PluginStringFuncs.wiki
@@ -1,7 +1,10 @@
 #summary Plugin providing supplementing string utilities
+#labels Phase-UserDocs
 
 This plugin provides the following JS-side functions:
 
   * `escape_js_string()` escapes a JS string.
   * `quote_js_string()` works like `escape_js_string()` but also adds quotes surrounding the string.
   * <tt>[PluginSprintf snprintf()]</tt>, for formatted output in classical `printf()` style.
+
+Reminder to self: port in the glob() and like() string matching functions from [http://fossil.wanderinghorse.net/repos/whefs the whefs tree].
